--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 
 # testpaths = lesson_04/training/test_string_processor.py
-testpaths = lesson_04/homeworke
+testpaths = lesson_04/homework/
 python_functions = *
 
 
