--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,8 @@
 [pytest]
 
 # testpaths = lesson_04/training/test_string_processor.py
-testpaths = lesson_05/homework/
+# testpaths = lesson_06/homework/
+testpaths = lesson_06/training/
 python_functions = *
 
 
