--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,7 @@
 
 # testpaths = lesson_04/training/test_string_processor.py
 # testpaths = lesson_06/homework/
-testpaths = lesson_06/training/
+testpaths = lesson_06K/homework/
 python_functions = *
 
 
