--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,7 @@
 [pytest]
 
-# testpaths = lesson_04/training/test_string_processor.py
-# testpaths = lesson_06/homework/
-testpaths = lesson_06K/homework/
+# testpaths = lesson_07/training/lesson7/test_search.py
+testpaths = lesson_07/homework/test/
 python_functions = *
 
 
