--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 
-# testpaths = lesson_07/training/lesson7/test_search.py
-testpaths = lesson_07/homework/test/
+# testpaths = lesson_08/training/lesson7/test_search.py
+testpaths = lesson_08/homework/
 python_functions = *
 
 
