--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,12 @@
 [pytest]
 
-# testpaths = lesson_08/training/lesson7/test_search.py
-testpaths = lesson_08/homework/
+# testpaths = lesson_09/training/
+testpaths = lesson_09/homework/
 python_functions = *
 
 
 markers = 
     positive_test: позитивные тесты 
     negative_test: негативные тесты 
+
+addopts = -k "not create_engine and not inspect and not text and not execute_query"
